--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ azure-functions
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==2.3.1+cpu
 torchvision==0.18.1+cpu
+pysqlite3-binary
+chromadb
+pydantic==2.8.2
 sentence-transformers==3.0.1
 langchain==0.2.14
 langchain-chroma==0.1.3
